# milvus

./: .gitignore  Makefile  go.mod  go.sum
client/: go.mod
cmd/roles/: roles.go
configs/: _test.yaml  milvus.yaml
configs/advanced/: component.yaml
core/src/dog_segment/: CMakeLists.txt  SegmentBase.h  SegmentNaive.cpp  cwrap.cpp  cwrap.h  main.cpp
docs/: 2026-01-28-get-replicate-configuration-api-design.md
internal/: .mockery.yaml
internal/compaction/: entity_filter.go  entity_filter_test.go
internal/coordinator/: mix_coord.go
internal/core/: CMakeLists.txt  conanfile.py
internal/datacoord/: .mockery.yaml  analyze_inspector.go  channel_manager.go  cluster.go  commit_timestamp_test.go  compaction.go  compaction_inspector.go  compaction_inspector_test.go  compaction_policy_l0_test.go  compaction_task_clustering.go  compaction_task_clustering_test.go  compaction_task_l0.go  compaction_task_l0_test.go  compaction_task_meta.go  compaction_task_mix.go  compaction_test.go  compaction_trigger.go  compaction_trigger_test.go  compaction_trigger_v2.go  compaction_trigger_v2_test.go  compaction_util.go  ddl_callbacks.go  ddl_callbacks_import.go  ddl_callbacks_import_test.go  garbage_collector.go  garbage_collector_test.go  grpc_services.go  handler.go  import_checker.go  import_checker_test.go  import_inspector.go  import_inspector_test.go  import_job.go  import_meta.go  import_meta_test.go  import_scheduler.go  import_scheduler_test.go  (+48 more)
pkg/: go.mod  go.sum
scripts/: 3rdparty_build.sh  proto_gen_go.sh  setenv.sh  start_cluster.sh  start_standalone.sh
(+756 files in other folders)
